// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-kstrdz cVJnKg Sidebar-resources "
>
  <div
    className="sc-hBEYos"
  >
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC sc-kEjbxe eWwnQD dSHECE"
        >
          <div
            className="sc-iBPRYJ sc-fubCfw hHeOdt hDyxGh isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz HrTde isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource4"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource4
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:36:03.000Z"
                  title="2017-12-21T15:36:03.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource9"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource9
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:58.000Z"
                  title="2017-12-21T15:35:58.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource19"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource19
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:48.000Z"
                  title="2017-12-21T15:35:48.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource29"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource29
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:38.000Z"
                  title="2017-12-21T15:35:38.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource39"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource39
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:28.000Z"
                  title="2017-12-21T15:35:28.000Z"
                >
                  &lt;45s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource49"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource49
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:18.000Z"
                  title="2017-12-21T15:35:18.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="resource54"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  resource54
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:13.000Z"
                  title="2017-12-21T15:35:13.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-kstrdz cVJnKg Sidebar-resources "
>
  <div
    className="sc-hBEYos"
  >
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC sc-kEjbxe eWwnQD dSHECE"
        >
          <div
            className="sc-iBPRYJ sc-fubCfw hHeOdt hDyxGh isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz HrTde isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-kstrdz cVJnKg Sidebar-resources "
>
  <div
    className="sc-hBEYos"
  >
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC sc-kEjbxe eWwnQD dSHECE"
        >
          <div
            className="sc-iBPRYJ sc-fubCfw hHeOdt hDyxGh isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz HrTde isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="vigoda"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:36:07.000Z"
                  title="2017-12-21T15:36:07.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isUnhealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: error"
              >
                <svg
                  fill="#ffffff"
                >
                  error.svg
                </svg>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Update error
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="snack"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                <time
                  dateTime="2017-12-21T15:35:57.000Z"
                  title="2017-12-21T15:35:57.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isUnhealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: error"
              >
                <svg
                  fill="#ffffff"
                >
                  error.svg
                </svg>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Update error
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-kstrdz cVJnKg Sidebar-resources "
>
  <div
    className="sc-hBEYos"
  >
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC sc-kEjbxe eWwnQD dSHECE"
        >
          <div
            className="sc-iBPRYJ sc-fubCfw hHeOdt hDyxGh isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz HrTde isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV fYwBSU"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz lggJRB"
      >
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="vigoda"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                —
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Updating…
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-gKsewC eWwnQD u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-iBPRYJ hHeOdt  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ zCSeR"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH sc-crrsfI dWLKtY fACPxI"
                title="snack"
              >
                <span
                  className="sc-dQppl dMras"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-bqyKva kPKqMc"
              >
                —
              </span>
              <button
                className="sc-jSgupP dqshtn"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
            <div
              className="sc-jrAGrp hzspIa"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz HrTde isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-iqHYGH dWLKtY"
              >
                Updating…
              </div>
              <button
                className="sc-dlfnbm fJbKOk"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-eCssSg doZCTl"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
